--- a/practice/Clarinet.toml
+++ b/practice/Clarinet.toml
@@ -8,23 +8,21 @@ cache_dir = "/Users/aakanksha/.clarinet/cache"
 boot_contracts = ["pox", "costs-v2", "bns"]
 [contracts.controlflows]
 path = "contracts/controlflows.clar"
-depends_on = []
 
 [contracts.divider-trait]
 path = "contracts/divider-trait.clar"
-depends_on = []
+
+[contracts.functions]
+path = "contracts/functions.clar"
 
 [contracts.maths-util]
 path = "contracts/maths-util.clar"
-depends_on = ["divider-trait", "multiplier-trait"]
 
 [contracts.multiplier-trait]
 path = "contracts/multiplier-trait.clar"
-depends_on = []
 
 [contracts.practice]
 path = "contracts/practice.clar"
-depends_on = []
 
 [repl]
 costs_version = 2
